# FuzzyAsteroids

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-publish.yml  python-test.yml
examples/: run_fuzzy_controller_game.py  run_fuzzy_game.py  run_game.py  run_scenario_runner.py  run_training_env.py  skfuzzy_demo.py  test_fuzzy_controllers.py  xai_audio_example.py
src/fuzzy_asteroids/: dashboard.py  fuzzy_asteroids.py  fuzzy_controller.py  game.py  runner.py  settings.py  sprites.py  util.py
test/: test_controller_base.py  test_fuzzy_game.py  test_game.py  test_scenario_runner.py  test_training_env.py  test_util.py
