# Copyright © 2014-2020 Thales Avionics USA
# NOTICE: This file is subject to the license agreement defined in file 'LICENSE', which is part of
# this source code package.

[metadata]
name = fuzzy_asteroids
version = attr: fuzzy_asteroids.__version__
url = https://github.com/TimArnettThales/FuzzyAsteroids
author = Timothy Arnett
author_email = tim.arnett@psibernetix.com
maintainer = Brandon Kunkel
maintainer_email = brandon.kunkel@psibernetix.com
description = UC Fuzzy Challenge - Asteroids Simulation Environment
long_description = file: README.md, CHANGELOG.md, LICENSE
keywords = fuzzy logic, artificial intelligence, asteroids
license = MIT License
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Operating System :: OS Independent
