# Copyright © 2014-2020 Thales Avionics USA
# NOTICE: This file is subject to the license agreement defined in file 'LICENSE', which is part of
# this source code package.

[metadata]
name = fuzzy_asteroids
version = attr: fuzzy_asteroids.__version__
url = https://github.com/xfuzzycomp/FuzzyAsteroids
author = Timothy Arnett
author_email = tim.arnett@psibernetix.com
maintainer = Timothy Arnett
maintainer_email = tim.arnett@psibernetix.com
description = Explainable Fuzzy Challenge - Asteroids Simulation Environment
long_description = file: README.md
keywords = fuzzy logic, artificial intelligence, asteroids
license = MIT License
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Operating System :: OS Independent

[options]
zip_safe = True
package_dir=
    =src
packages = find:
python_requires = >=3.6

[options.packages.find]
where=src
